--- a/style.css
+++ b/style.css
@@ -12,8 +12,8 @@ body {
 
 .multiple-text {
     font-size: 9rem;
-    /* font-family: "Gill Sans Extrabold", sans-serif; */
-    font-family: serif;
+    font-family: "Gill Sans Extrabold", sans-serif;
+    /* font-family: serif; */
 }
 
 
@@ -44,6 +44,10 @@ body {
     font-size: 3rem;
     position: absolute;
     bottom: 5%;
+}
+
+h1 a{
+    font-size: 2rem;
 }
 
 .bg-wrap {
